--- a/package.json
+++ b/package.json
@@ -8,9 +8,11 @@
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
+    "clean:reports": "mkdir -p allure-report && rm -R -f allure-report/* && mkdir -p allure-results && rm -R -f allure-results/*",
+    "pretest": "npm run clean:reports",
     "cy:run": "cypress run --env allure=true --headed --browser=chrome",
-    "allure:report": "allure generate allure-results --clean  -o allure-report",
-    "cyTest": "npm run cy:run || npm run postcyTest && npm run launchReport",
+    "allure:report": "allure generate allure-results  -o allure-report",
+    "cyTest": "npm run pretest && npm run cy:run || npm run postcyTest && npm run launchReport",
     "postcyTest": "npm run allure:report",
     "launchReport": "allure serve"
   },
